--- a/configs/plex/ingress.yaml
+++ b/configs/plex/ingress.yaml
@@ -11,6 +11,9 @@ metadata:
     external-dns.alpha.kubernetes.io/enabled: "true"
     external-dns.alpha.kubernetes.io/hostname: "plex.home"
     external-dns.alpha.kubernetes.io/ttl: "60"
+    # Add these Traefik specific annotations
+    traefik.ingress.kubernetes.io/preserve-host: "true"
+    traefik.ingress.kubernetes.io/pass-client-headers: "true"
 spec:
   tls:
     - hosts:
@@ -24,6 +27,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: plex-server-lb
+                name: plex
                 port:
-                  number: 443
+                  number: 32400
