Revert "update modules"
This reverts commit 5ab2d706a5558c0a01ffb3b6f414e8b4cd369c1c.

--- a/configs/plex/service.yaml
+++ b/configs/plex/service.yaml
@@ -9,9 +9,12 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - port: 32400
+    - port: 80
       targetPort: 32400
-      name: web
+      name: http
+    - port: 443
+      targetPort: 32400
+      name: https
     - port: 1900
       targetPort: 1900
       protocol: UDP
@@ -60,3 +63,4 @@ spec:
       name: gdm3
   selector:
     app: plex
+
