--- a/configs/plex/ingress.yaml
+++ b/configs/plex/ingress.yaml
@@ -11,9 +11,6 @@ metadata:
     external-dns.alpha.kubernetes.io/enabled: "true"
     external-dns.alpha.kubernetes.io/hostname: "plex.home"
     external-dns.alpha.kubernetes.io/ttl: "60"
-    # Add these Traefik specific annotations
-    traefik.ingress.kubernetes.io/preserve-host: "true"
-    traefik.ingress.kubernetes.io/pass-client-headers: "true"
 spec:
   tls:
     - hosts:
@@ -27,6 +24,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: plex
+                name: plex-server-lb
                 port:
-                  number: 32400
+                  number: 443
