--- a/configs/nextcloud/secrets.yaml
+++ b/configs/nextcloud/secrets.yaml
@@ -8,3 +8,14 @@ data:
   username: cG9zdGdyZXM=
   password: TmFzU2VydmVyUG9zdGdyZXNkYg==
 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: nextcloud-minio-creds
+  namespace: media
+type: Opaque
+data:
+  accessKey: YWRtaW4=  # admin
+  secretKey: bWluaW8xMjNTZWN1cmVQYXNzd29yZCFAIw==
+
