--- a/configs/nextcloud/service.yaml
+++ b/configs/nextcloud/service.yaml
@@ -1,19 +1,35 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nextcloud-server-lb
+  name: nextcloud
+  namespace: media
+  labels:
+    app: nextcloud
+spec:
+  selector:
+    app: nextcloud
+  ports:
+    - port: 80
+      targetPort: 80
+      protocol: TCP
+      name: http
+  type: ClusterIP
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nextcloud-lb
   namespace: media
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "nextcloud.home"
     external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
 spec:
-  type: LoadBalancer
+  selector:
+    app: nextcloud
   ports:
     - port: 80
       targetPort: 80
+      protocol: TCP
       name: http
-    - port: 443
-      targetPort: 80
-      name: https
-  selector:
-    app: nextcloud
+  type: LoadBalancer
