--- a/configs/nextcloud/secrets.yaml
+++ b/configs/nextcloud/secrets.yaml
@@ -16,6 +16,17 @@ metadata:
   namespace: media
 type: Opaque
 data:
-  accessKey: YWRtaW4=  # admin
+  accessKey: YWRtaW4=
   secretKey: bWluaW8xMjNTZWN1cmVQYXNzd29yZCFAIw==
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: nextcloud-admin-creds
+  namespace: media
+type: Opaque
+data:
+  username: YWRtaW4=
+  password: Y2hhbmdlbWUxMjM= 
 
