--- a/configs/nextcloud/service.yaml
+++ b/configs/nextcloud/service.yaml
@@ -1,35 +1,36 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nextcloud
-  namespace: media
-  labels:
-    app: nextcloud
-spec:
-  selector:
-    app: nextcloud
-  ports:
-    - port: 80
-      targetPort: 80
-      protocol: TCP
-      name: http
-  type: ClusterIP
-
----
-apiVersion: v1
-kind: Service
-metadata:
   name: nextcloud-lb
   namespace: media
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "nextcloud.home"
     external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
 spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 80
+      name: http
+    - port: 443
+      targetPort: 80
+      name: https
   selector:
     app: nextcloud
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nextcloud
+  namespace: media
+  labels:
+    app: nextcloud
+spec:
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 80
       protocol: TCP
       name: http
-  type: LoadBalancer
+  selector:
+    app: nextcloud
