--- a/configs/nextcloud/service.yaml
+++ b/configs/nextcloud/service.yaml
@@ -21,6 +21,8 @@ metadata:
   name: nextcloud-lb
   namespace: media
   annotations:
+    metallb.universe.tf/allow-shared-ip: "true"
+    metallb.universe.tf/loadBalancerIPs: "192.168.71.13"    
     external-dns.alpha.kubernetes.io/hostname: "nextcloud.home"
     external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
   labels:
@@ -38,3 +40,5 @@ spec:
       protocol: TCP
       name: https
   type: LoadBalancer
+  loadBalancerIP: 192.168.71.13
+    
