--- a/configs/nextcloud/deployment.yaml
+++ b/configs/nextcloud/deployment.yaml
@@ -125,8 +125,8 @@ spec:
                 ),
                 
                 'trusted_proxies' => array('10.0.0.0/8', '172.16.0.0/12', '192.168.0.0/16'),
-                'overwriteprotocol' => 'https',
-                'overwrite.cli.url' => 'https://nextcloud.home',
+                'overwriteprotocol' => 'http',
+                'overwrite.cli.url' => 'http://192.168.71.13',
               );
               EOF
               
